Use String.formatted()
Fix modernizer warnings.

Change-Id: Ic151998472b4b791df66f18af02c45f820f581da
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>